# OpenGL_Samples

./: .gitignore  CMakeLists.txt  OpenGL_Samples.sln
Based/: App.h  Based.vcxproj  Based.vcxproj.filters  Camera.cpp  Camera.h  Common.h  GL_App.cpp  GL_ImguiRenderPass.cpp  GL_ImguiRenderPass.h  GL_Mesh.cpp  GL_Mesh.h  GL_RenderPipeline.cpp  GL_RenderPipeline.h  GL_SceneRenderPass.cpp  GL_SceneRenderPass.h  GL_Texture.cpp  GL_Texture.h  GL_World.h  InputProcess.h  LightObject.cpp  LightObject.h  Material.cpp  Material.h  Mesh.h  RayTracingObject.cpp  RayTracingObject.h  RenderPass.h  RenderPipeline.h  RendererObject.cpp  RendererObject.h  Shader.cpp  Shader.h  Shader_PT.cpp  Shader_PT.h  Shader_Phong.cpp  Shader_Phong.h  Texture.h  Type.h  gl_App.h  imgui.ini  (+2 more)
assets/: model_vs.glsl  巴黎公社墙_卡通_Lod_合并.mtl
assets/shaders/: light_fs.glsl  pathtracing_vs.glsl  phong_fs.glsl  phong_vs.glsl  pt.frag  pt.vert  pt_fs.glsl
srcs/: Camera.cpp  Common.h  GL_App.cpp  GL_ImguiRenderPass.h  GL_Mesh.cpp  GL_Mesh.h  GL_RenderPipeline.cpp  GL_RenderPipeline.h  GL_Texture.cpp  GL_World.h  InputProcess.h  LightObject.cpp  LightObject.h  Material.cpp  Material.h  Shader.cpp  Type.h  main.cpp
